Apply minor polish to RESTEasy Reactive extension using Java 11 Collection methods